Cycles crashes when both OSL and Optix Denoising are enabled #74393

Closed
opened 2020-03-03 11:16:51 +01:00 by William Reynish · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-03-02 23:59, hash: fe7c4fb4a2
Worked: N/A

Short description of error
If you enable both OSL and Optix denoising, Cycles crashes

Exact steps for others to reproduce the error

volume_fade_OSL.blend

  • open the blend file above
  • press render

crash

Disable viewport and output denoising, and the file renders normally

You can also reproduce the crash easily from scratch:

  • Set the renderer to Cycles
  • Enable Open Shading Language
  • Enable Optix in Preferences > System
  • Enable Optix AI-Accelerated Viewport Denoising
  • Render
  • Crash
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-03-02 23:59, hash: `fe7c4fb4a2` Worked: N/A **Short description of error** If you enable both OSL and Optix denoising, Cycles crashes **Exact steps for others to reproduce the error** [volume_fade_OSL.blend](https://archive.blender.org/developer/F8384744/volume_fade_OSL.blend) - open the blend file above - press render # crash Disable viewport and output denoising, and the file renders normally You can also reproduce the crash easily from scratch: - Set the renderer to Cycles - Enable Open Shading Language - Enable Optix in Preferences > System - Enable Optix AI-Accelerated Viewport Denoising - Render - Crash

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
William Reynish changed title from Cycles crash with OSL to Cycles crashes when both OSL and Optix Denoising are enabled 2020-03-03 11:28:19 +01:00

Found the actual issue: If both OSL and Optix denoising is enabled, I get a crash every time.

Found the actual issue: If both OSL and Optix denoising is enabled, I get a crash every time.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This comment was removed by @lichtwerk

*This comment was removed by @lichtwerk*
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Couldn't reproduce the crash myself, but I could not test with Optix.

Couldn't reproduce the crash myself, but I could not test with Optix.

@JacquesLucke the crash only happens here if you enable Optix also - you'll need an Optix-enabled system to reproduce the crash.

@JacquesLucke the crash only happens here if you enable Optix also - you'll need an Optix-enabled system to reproduce the crash.

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv

This issue was referenced by blender/cycles@2695512915

This issue was referenced by blender/cycles@269551291536f8d84dc5859bda8529b45e6ec26b

This issue was referenced by 88db9a17ce

This issue was referenced by 88db9a17ce70c4553be1922e3ecef091e8c1d039
Patrick Mours self-assigned this 2020-03-05 16:31:52 +01:00
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Member

Fixed in 88db9a17ce.

Fixed in 88db9a17ce.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74393
No description provided.